# markov_guessing

./: .gitmodules  000.txt  001.txt  002.txt  003.txt  004.txt  005.txt  006.txt  007.txt  008.txt  009.txt  CMakeLists.txt  CryptLib_Md5.cpp  CryptLib_Md5.hpp  LICENSE  Makefile  README.md  ascii_progress_bar.hpp  gen-markov-matrices.cpp  gen_markov_matrices.cpp  guess_pass.cpp  guess_pass.hpp  matrix.hpp  rockyou.txt
doc/: .gitignore  bibliography.bib  markov_guessing.tex  markov_tables.tex  markov_tables_pairs.tex  markov_tables_pairs_sorted.tex
inc/: ascii_progress_bar.hpp  guess_pass.hpp
presentation/: markov_guessing.tex  markov_tables.tex  markov_tables_pairs.tex
src/: gen_markov_matrices.cpp  guess_pass.cpp
